--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,9 +16,11 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=0
-r.ReflectionMethod=2
+r.ReflectionMethod=0
 r.Shadow.Virtual.Enable=1
-r.AntiAliasingMethod=2
+r.AntiAliasingMethod=0
+r.Mobile.AntiAliasing=2
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -45,7 +47,7 @@ ManualIPAddress=
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((CardinalCross, "/Game/MusicPlayer/Blueprints/UMG/UI_Main.UI_Main_C"))
+SoftwareCursors=()
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
