--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,10 @@
 
+
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=937244B441E0D081F12BA281E97DD8FE
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=False
++StartupMovies=UE_Logo
+
