Update Search Music

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MusicPlayer/Maps/MusicMap.MusicMap
 EditorStartupMap=/Game/MusicPlayer/Maps/MusicMap.MusicMap
+GlobalDefaultServerGameMode=/Game/MusicPlayer/Blueprints/GameBase/GM_MusicGameMode.GM_MusicGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
